--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "watch-css": "concat node_modules/material-design-lite/material.min.css styles.css -o dist/bundle.css",
     "build-html": "copyfiles index.html dist",
     "watch-html": "concat index.html -o dist/index.html",
-    "build-js": "browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
-    "watch-js": "watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
+    "build-js": "NODE_NO_WARNINGS=1 browserify src/playground.ts -p [tsify] | uglifyjs -c > dist/bundle.js",
+    "watch-js": "NODE_NO_WARNINGS=1 watchify src/playground.ts -p [tsify] -v --debug -o dist/bundle.js",
     "build": "npm run prep && npm run build-js && npm run build-css && npm run build-html",
     "watch": "npm run prep && concurrently \"npm run watch-js\" \"npm run watch-css\" \"npm run watch-html\"",
     "serve": "npx serve dist/",
